Resolved merge conflict by keeping local files

--- a/02_Python_Essentials/L02-variables-type-casting/L02-0print.ipynb
+++ b/02_Python_Essentials/L02-variables-type-casting/L02-0print.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e724929f-5c74-4032-aa07-f4e32aaadc65",
    "metadata": {
     "colab": {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "acbda49d-28e0-4718-95ef-05dc8ae8d2df",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "65bb1a99-0543-4a19-bc25-2e0250e79e27",
    "metadata": {},
    "outputs": [
@@ -74,16 +74,7 @@
    "execution_count": null,
    "id": "a5e91f0d-b4ef-467a-9115-1e05ab6d3c98",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Hello world\n",
-      "2 Hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"1 Hello world\") # octothorpe or hashtag. Write comments here\n",
     "print('2 Hello world') # using single quote"
@@ -94,23 +85,16 @@
    "execution_count": null,
    "id": "5b867645-8e99-49e3-a334-c63aa97d9338",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is a commented out line. If you uncomment it, Python would give error\n",
+    "\n",
     "print('1 Hello world') # using single quote"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9239b98b-05df-4bc2-bf43-a99600872c9b",
    "metadata": {},
    "outputs": [
@@ -142,14 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "04805a90-01dd-4cf6-83da-8c1cdc1e5287",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 Hello world.Today its raining.It is going to be humid today.\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# using + to print series of strings.\n",
     "print(\"4 Hello world.\" + \"Today its raining.\" + \"It is going to be humid today.\")"
@@ -186,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5d385f47-06c3-4cd1-b9e3-8e4fd0105ee6",
    "metadata": {},
    "outputs": [
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7da3f4b4-d729-444d-ba6e-f785b326d840",
    "metadata": {},
    "outputs": [
@@ -282,7 +270,7 @@
    "metadata": {},
    "source": [
     "## print special characters, aka escape sequence\n",
-    "- **back-slash** is treated differently inside a string\n",
+    "- **back-slash** \\ is treated differently inside a string\n",
     "- These are used to represent non-printable or reserved characters in strings\n",
     "```\n",
     "Escape Sequence Meaning\tExample\n",
@@ -294,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "78666afc-7e03-4058-9c9b-87828dbb0175",
    "metadata": {},
    "outputs": [
@@ -302,7 +290,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello. My name is Khal. My age is 23.\n",
       "Hello. \t\tMy name is Khal. \tMy age is 23.\n"
      ]
     }
@@ -310,14 +297,14 @@
    "source": [
     "# newline, tab\n",
     "\n",
-    "print(\"Hello. My name is Khal. My age is 23.\") \n",
+    "# print(\"Hello. My name is Khal. My age is 23.\") \n",
     "# print(\"2 Hello. \\nMy name is Khal. \\nMy age is 23.\") # newline\n",
     "print(\"Hello. \\t\\tMy name is Khal. \\tMy age is 23.\") # tabline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "41b6a4b6-ff38-4262-a872-4a7a5efeeb58",
    "metadata": {},
    "outputs": [
@@ -339,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ac3ea28f-0fef-430f-834e-4c0844713c29",
    "metadata": {},
    "outputs": [
@@ -356,6 +343,7 @@
     "\n",
     "# print(\"The path of file is C:\\Users\\file.txt\") # Throws error\n",
     "# print(\"\"\"The path of file is C:\\Users\\file.txt\"\"\") # Throws error\n",
+    "\n",
     "print(\"The path of file is C:\\\\Users\\\\file.txt\") # C:\\Users\\file.txt"
    ]
   },
@@ -407,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c1eb4949-0cb2-4361-84c8-24b42dc57acf",
    "metadata": {},
    "outputs": [
@@ -435,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "aa607c52-4c1f-42eb-9570-423e7fde9870",
    "metadata": {},
    "outputs": [
@@ -478,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "b7313d77-ab95-4986-b4d6-22f2516c1747",
    "metadata": {},
    "outputs": [
@@ -504,11 +492,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9f813e15-41cb-4ac6-93d4-e4847b66c296",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 5"
@@ -540,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5931f66d-5f75-4cd6-aacf-2abf9b34c7c5",
    "metadata": {},
    "outputs": [
@@ -548,6 +532,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Happy\n",
       "Hello. My name is Happy and my age is 40\n"
      ]
     }
@@ -558,6 +543,7 @@
     "person = \"Happy\" # person is a str variable with value Happy, \n",
     "age = 40         # age is a int variable with value 40\n",
     "\n",
+    "print(person)\n",
     "print(\"Hello. My name is\", person, \"and my age is\", age)"
    ]
   },
@@ -675,15 +661,7 @@
     },
     "outputId": "000e6144-3680-4d62-d010-1f7119b44f91"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. My name is Alice . My brothers name is Rahim . My age is 10 . My weight is 4.345\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lets say you are getting data from some other source in form of variables. Lets print it.\n",
     "\n",
@@ -719,15 +697,7 @@
     },
     "outputId": "56de9eca-51c1-493b-c58b-f292e7ca4b75"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. My name is Alice. My brother name is Rahim. My age is 10. My weight is 4.345\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# style 2) Printing Multiple Values: formatting string (f-string)\n",
     "person  = \"Happy\"    # person is a str variable with value Happy, \n",
@@ -768,17 +738,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number is 3.14159\n",
-      "The number is 3.14\n",
-      "The number is 3.142\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 3.14159 # use 22/7\n",
     "print(f\"The number is {n}\") \n",
@@ -820,22 +780,7 @@
     },
     "outputId": "4426390a-64e9-4cf8-8182-a135492ea055"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 HelloWorld!\n",
-      "2 Hello\n",
-      "World!\n",
-      "3 Hello!\n",
-      "Good Morning. \n",
-      " Hope you had good sleep\n",
-      "How\tare\tyou\tRahim!\n",
-      "Hello\tWorld! This is my \tfirst example \tof tab\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -859,15 +804,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The path of file is C:\\Users\\file.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -879,15 +816,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "He said, \"You look happy\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# printing \" inside a \"\": He said, \"You look happy\"\n",
     "\n",
@@ -928,15 +857,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The gentleman said, '1 Hello world'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SKIP single quote inside a double quote\n",
     "print(\"The gentleman said, '1 Hello world'\") "
@@ -1048,17 +969,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hey Harry. How are you doing Harry ?. \n",
-      "It's a good day Harry to do some kayaking \n",
-      "today. What do you think Harry?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Why do we need variables ? A simple use case: Easy to change the names at multiple places and I can reuse the  string\n",
     "person = 'Harry'\n",
@@ -1087,16 +998,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. How are you? I am doing good.\n",
-      "Hello...how are you?...I am doing good.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### (OPTIONAL) Seperator between string\n",
     "print(\"Hello.\", \"How are you?\", \"I am doing good.\")\n",
@@ -1126,18 +1028,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello.\n",
-      "How are you?\n",
-      "I am doing good.\n",
-      "Hello. How are you? I am doing good. "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (OPTIONAL)  endline between print statememt\n",
     "\n",
@@ -1178,15 +1069,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My age is 21. People twice my age would be 42 years old\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# perform calculation inside format string\n",
     "age = 21\n",
@@ -1202,16 +1085,7 @@
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "5789\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Python(unlike SQL) is CASE SENSITIVE  <- VERY IMPORTANT\n",
     "a = 3\n",
@@ -1242,17 +1116,7 @@
     },
     "outputId": "95dd9897-4137-416f-a691-d7e00d13d002"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "😀\n",
-      "I am feeling  😀\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ASCII Characters using chr()\n",
     "print(chr(65))   # 'A'\n",
@@ -1292,7 +1156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
