--- a/02_Python_Essentials/L02-variables-type-casting/L02-3typecast_input.ipynb
+++ b/02_Python_Essentials/L02-variables-type-casting/L02-3typecast_input.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "10bef015-5ffc-4c71-8e21-f60a81fc6164",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "fa23e749-b1db-4883-a06d-95eb2b3bc6d0",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "d8493a8e-2647-432b-8318-4a9b67878fee",
    "metadata": {},
    "outputs": [
@@ -152,28 +152,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "36\n"
      ]
     }
    ],
    "source": [
-    "a = 10.8\n",
-    "x = int(a)\n",
+    "weight = 36.8\n",
+    "x = int(weight)\n",
     "\n",
     "print(x)   # decimal part is removed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "9b484aee-a02d-45a4-889f-7579bd900f57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'Hello. Jerry'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m## Invalid conversion / casting\u001b[39;00m\n\u001b[32m      2\u001b[39m \n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# This will cause an error\u001b[39;00m\n\u001b[32m      4\u001b[39m msg = \u001b[33m\"\u001b[39m\u001b[33mHello. Jerry\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m a = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmsg\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: 'Hello. Jerry'"
+     ]
+    }
+   ],
    "source": [
-    "## Invalid conversion\n",
+    "## Invalid conversion / casting\n",
     "\n",
     "# This will cause an error\n",
-    "# int(\"hello\")"
+    "# msg = \"Hello. Jerry\"\n",
+    "# a = int(msg)"
    ]
   },
   {
@@ -244,6 +257,7 @@
    ],
    "source": [
     "a = 5   # int\n",
+    "\n",
     "x = float(a)\n",
     "\n",
     "print(x)"
@@ -251,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "7562f197-8990-4644-ba49-aeb6f4504a5d",
    "metadata": {},
    "outputs": [
@@ -259,15 +273,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.14\n"
+      "38.14\n"
      ]
     }
    ],
    "source": [
-    "a = \"3.14\"  # string\n",
-    "x = float(a)\n",
+    "weight = \"37.14\"  # string\n",
     "\n",
-    "print(x)"
+    "x = float(weight)\n",
+    "\n",
+    "print(x + 1)"
    ]
   },
   {
@@ -324,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "7ea38bef-cca4-4eda-89d6-78baa5adc91a",
    "metadata": {},
    "outputs": [
@@ -332,8 +347,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Age is 25\n",
-      "Score is 99.5\n"
+      "25\n",
+      "My age is 25 and my score is 99.5\n"
      ]
     }
    ],
@@ -341,11 +356,12 @@
     "age = 25\n",
     "score = 99.5\n",
     "\n",
-    "msg1 = \"Age is \" + str(age)\n",
-    "msg2 = \"Score is \" + str(score)\n",
+    "# msg = \"Age is \" + age # ERROR\n",
+    "print(age)\n",
     "\n",
-    "print(msg1)\n",
-    "print(msg2)"
+    "msg = \"My age is \" + str(age) + \" and my score is \" + str(score)\n",
+    "\n",
+    "print(msg)"
    ]
   },
   {
@@ -412,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "775778e7-1a4b-4981-87dc-35a71298a573",
    "metadata": {},
    "outputs": [
@@ -424,16 +440,18 @@
       "True\n",
       "False\n",
       "True\n",
-      "True\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "print(bool(0.0))\n",
-    "print(bool(1))\n",
-    "print(bool(\"\"))\n",
-    "print(bool(\"Python\"))\n",
-    "print(bool(100))"
+    "print(bool(0.0))         # False\n",
+    "print(bool(1))           # True\n",
+    "print(bool(\"\"))          # False  \n",
+    "print(bool(\"Python\"))    # True\n",
+    "print(bool(100))         # True\n",
+    "print(bool(None))        # False"
    ]
   },
   {
@@ -491,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "d4e04dd9-96a0-4b65-8bdc-188814429d0a",
    "metadata": {},
    "outputs": [
@@ -499,14 +517,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your name:  ash\n"
+      "Enter your name:  sumit\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, ash\n"
+      "Hello, sumit\n"
      ]
     }
    ],
@@ -532,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "5097d19a-ccbe-487f-aa08-b5b405c4d1a0",
    "metadata": {},
    "outputs": [
@@ -540,7 +558,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your age:  23\n"
+      "Enter your age:  12\n"
      ]
     },
     {
@@ -548,17 +566,6 @@
      "output_type": "stream",
      "text": [
       "<class 'str'>\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m age \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter your age: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(age))\n\u001b[1;32m----> 5\u001b[0m new_age \u001b[38;5;241m=\u001b[39m \u001b[43mage\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m \u001b[38;5;66;03m# ERROR\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
      ]
     }
    ],
@@ -572,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "9f0494eb-d1cb-4f37-9648-bfb8032fd7cf",
    "metadata": {},
    "outputs": [
@@ -580,14 +587,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your age:  23\n"
+      "Enter your age:  31\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Next year your age will be: 24\n"
+      "Next year your age will be: 32\n"
      ]
     }
    ],
@@ -617,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "a7703426-fbeb-49ac-b105-98f103ccf43d",
    "metadata": {},
    "outputs": [
@@ -625,15 +632,15 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter first number:  12\n",
-      "Enter second number:  4\n"
+      "Enter first number:  12.5\n",
+      "Enter second number:  1.6\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum: 16.0\n"
+      "Sum: 14.1\n"
      ]
     }
    ],
@@ -786,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
