--- a/02_Python_Essentials/L03-operators/L03-operators-4-Logical.ipynb
+++ b/02_Python_Essentials/L03-operators/L03-operators-4-Logical.ipynb
@@ -45,10 +45,11 @@
    ],
    "source": [
     "# and operator: if every single condition is True then it will return True, else it will return False \n",
-    "print(True  and True)\n",
-    "print(True  and False)\n",
-    "print(False and True)\n",
-    "print(False and False)"
+    "\n",
+    "print(True  and True)  # 1 x 1 = 1\n",
+    "print(True  and False) # 1 x 0 = 0\n",
+    "print(False and True)  # 0 x 1 = 0\n",
+    "print(False and False) # 0 x 0 = 0"
    ]
   },
   {
@@ -85,7 +86,7 @@
     }
    ],
    "source": [
-    "# example1: Check if age is between 20 and 30\n",
+    "# Example1: Check if age is between 20 and 30\n",
     "age = 60\n",
     "\n",
     "res = age > 20 and age < 30 \n",
@@ -108,7 +109,8 @@
     }
    ],
    "source": [
-    "# example2: Check if age and income satisfy some condition\n",
+    "# Example2: Check if age and income satisfy some condition\n",
+    "\n",
     "age = 25 \n",
     "income = 20000\n",
     "\n",
@@ -173,10 +175,11 @@
    ],
    "source": [
     "# or operator: if a single condition is True then  it will return True else it will return False\n",
-    "print(True  or True)\n",
-    "print(True  or False)\n",
-    "print(False or True)\n",
-    "print(False or False)"
+    "\n",
+    "print(True  or True)   # 1 + 1 = 1\n",
+    "print(True  or False)  # 1 + 0 = 1 \n",
+    "print(False or True)   # 0 + 1 = 1\n",
+    "print(False or False)  # 0 + 0 = 0"
    ]
   },
   {
@@ -196,9 +199,10 @@
    ],
    "source": [
     "# multiple or \n",
-    "print(True  or True  or True  or True)\n",
-    "print(True  or True  or False or True)\n",
-    "print(False or False or False or False)"
+    "\n",
+    "print(True  or True  or True  or True)  # 1 + 1 + 1 + 1 = 1\n",
+    "print(True  or True  or False or True)  # 1 + 1 + 0 + 1 = 1\n",
+    "print(False or False or False or False) # 0 + 0 + 0 + 0 = 0-"
    ]
   },
   {
@@ -215,7 +219,7 @@
     }
    ],
    "source": [
-    "# EXAMPLE1: determine if age is out range [30 to 60]\n",
+    "# EXAMPLE1: Determine if age is out range [30 to 60]\n",
     "age = 5\n",
     "\n",
     "res = age < 30 or age > 60 \n",
@@ -238,7 +242,7 @@
     }
    ],
    "source": [
-    "# EXAMPLE2: check age and name\n",
+    "# EXAMPLE2: Check age or name\n",
     "age = 5\n",
     "name = 'jerry'\n",
     "\n",
@@ -394,7 +398,7 @@
     }
    ],
    "source": [
-    "#example: check if user is admin\n",
+    "# Example: Check if user is admin\n",
     "user = 'Admin'\n",
     "is_admin = (user == 'Admin')\n",
     "\n",
@@ -635,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
