--- a/02_Python_Essentials/L05-loops/L05-2_loop_while_break_continue.ipynb
+++ b/02_Python_Essentials/L05-loops/L05-2_loop_while_break_continue.ipynb
@@ -29,8 +29,7 @@
       "2\n",
       "3\n",
       "4\n",
-      "5\n",
-      "#################\n"
+      "5\n"
      ]
     }
    ],
@@ -38,7 +37,9 @@
     "# 1. Basic while Loop\n",
     "\n",
     "# print 1 2 3 4 5 on each newline\n",
+    "\n",
     "i = 1\n",
+    "\n",
     "while i <= 5:\n",
     "    print(i)\n",
     "    i += 1  # Increment i by 1\n"
@@ -46,8 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "3b215707-d0eb-43de-a690-5684cf0eb88d",
+   "execution_count": null,
+   "id": "0203b58f-5e84-44ca-bea8-5c61cedf0202",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "af74553c-427b-4604-b89f-525cf359428b",
    "metadata": {},
    "outputs": [
     {
@@ -59,22 +68,7 @@
       "6\n",
       "8\n",
       "10\n",
-      "Done\n",
-      "##############\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "Done\n",
-      "##############\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "Done\n",
-      "##############\n"
+      "Done\n"
      ]
     }
    ],
@@ -88,19 +82,59 @@
     "    print(num)\n",
     "    num += 2 # increment num by 2\n",
     "\n",
-    "print(\"Done\")\n",
-    "print(\"##############\")\n",
-    "\n",
-    "#style2\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0fa6d402-d409-4b59-a4cd-e66998cb4101",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "#style2: Using remainder %\n",
     "num = 0\n",
     "while num < 10:\n",
     "    num += 1          # increment num by 1\n",
     "    if num % 2 == 0:  # Check if the number is even\n",
     "        print(num)    \n",
     "\n",
-    "print(\"Done\")\n",
-    "print(\"##############\")\n",
-    "\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3b215707-d0eb-43de-a690-5684cf0eb88d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
     "#style3: using continue\n",
     "num = 0\n",
     "while num < 10:\n",
@@ -109,9 +143,24 @@
     "        continue  # Skip odd numbers\n",
     "    print(num)\n",
     "\n",
-    "print(\"Done\")\n",
-    "print(\"##############\")\n"
+    "print(\"Done\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d9e3a09-2be4-4eb3-af25-bf102bee251a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd481d05-6651-442f-afe4-7346e89780fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -123,23 +172,172 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You entered: 1\n"
+      "Enter a number to multiply by 5 (0 to stop):  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 muliply by 5: 20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number to multiply by 5 (0 to stop):  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 muliply by 5: 40\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number to multiply by 5 (0 to stop):  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loop ended.\n"
      ]
     }
    ],
    "source": [
-    "# 2. while Loop with User Input\n",
-    "num = int(input(\"Enter a number (0 to stop): \"))\n",
+    "#  while Loop with User Input\n",
+    "num = int(input(\"Enter a number to multiply by 5 (0 to stop): \"))\n",
     "while num != 0:\n",
-    "    print(f\"You entered: {num}\")\n",
-    "    num = int(input(\"Enter a number (0 to stop): \"))\n",
+    "    print(f\"{num} multiply by 5: {num*5}\")\n",
+    "    num = int(input(\"Enter a number to multiply by 5 (0 to stop): \"))\n",
     "\n",
     "print(\"Loop ended.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "328a0620-fc79-4695-af7c-3b93550efd7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86ac727f-7906-4bdf-a9ec-175092a2422e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61d76ea0-7a03-47c0-b004-f0271db5c5de",
+   "metadata": {},
+   "source": [
+    "### Real World Example: ATM PIN Verification\n",
+    "\n",
+    "Scenario:\n",
+    "When a user inserts an ATM card:\n",
+    "- User gets maximum 4 attempts to enter correct PIN\n",
+    "- If PIN is correct → Stop asking\n",
+    "- If attempts exceed → Block card"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "97e039c3-7072-4e2c-83ee-2ab72bb19496",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your ATM PIN:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect PIN at attempt number 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your ATM PIN:  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect PIN at attempt number 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your ATM PIN:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect PIN at attempt number 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your ATM PIN:  89\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Incorrect PIN at attempt number 4\n",
+      "Card Blocked\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_pin = \"1234\"\n",
+    "attempts = 0\n",
+    "\n",
+    "while attempts < 4:\n",
+    "    pin = input(\"Enter your ATM PIN: \")\n",
+    "\n",
+    "    if pin == correct_pin:\n",
+    "        print(\"Access Granted\")\n",
+    "        break # exit the loop\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Incorrect PIN at attempt number {attempts+1}\")\n",
+    "        attempts += 1\n",
+    "\n",
+    "\n",
+    "if attempts == 4:\n",
+    "    print(\"Card Blocked\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "ade7ccac-c251-4cf4-80bb-d4751a6cb359",
    "metadata": {},
    "outputs": [
@@ -150,15 +348,14 @@
       "1\n",
       "2\n",
       "3\n",
-      "Stopping at 4\n",
-      "##############\n"
+      "Stopping at 4\n"
      ]
     }
    ],
    "source": [
     "# while + break\n",
     "\n",
-    "# 3. Using break in a while Loop to exit the loop\n",
+    "# Using break in a while Loop to exit the loop\n",
     "\n",
     "# print 1 2 3 on each newline and stop at 4\n",
     "i = 1\n",
@@ -167,18 +364,25 @@
     "        print(\"Stopping at 4\")\n",
     "        break  # Exit/break out of the loop\n",
     "    print(i)\n",
-    "    i += 1\n",
-    "print(\"##############\")"
+    "    i += 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f31e6460-0a9c-4818-861f-cd465ca60e81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "ac4aa14e-04b9-4f3b-9efa-499560324909",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. Infinite Loop (Press Ctrl+C to Stop) DANGEROUS\n",
+    "# Infinite Loop (Press Ctrl+C to Stop) DANGEROUS\n",
     "\n",
     "#infinite loop\n",
     "# i = 1\n",
@@ -281,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
