--- a/02_Python_Essentials/L02-variables-type-casting/L02-1Understanding-variables.ipynb
+++ b/02_Python_Essentials/L02-variables-type-casting/L02-1Understanding-variables.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "2da4bd85-6043-41c1-9c62-739ff7e8584a",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,8 @@
      "text": [
       "10\n",
       "Python\n",
-      "4.8\n"
+      "4.8\n",
+      "rating\n"
      ]
     }
    ],
@@ -54,7 +55,9 @@
     "\n",
     "print(x)\n",
     "print(name)\n",
-    "print(rating)"
+    "print(rating)\n",
+    "\n",
+    "print(\"rating\")"
    ]
   },
   {
@@ -64,8 +67,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [],
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "91f6f45d-1312-44ad-869f-cf63860e1267",
    "metadata": {},
    "outputs": [
@@ -301,8 +303,8 @@
     "\n",
     "#### Not Allowed:\n",
     "- Starting with a number : 2_name not alowed\n",
-    "- Special characters: #, @, $, -, + etc are not allowed\n",
-    "- Python keywords: "
+    "- Special characters: #, @, $, %, -, + etc are not allowed\n",
+    "- Python keywords: import, print, int, str, class, etc..."
    ]
   },
   {
@@ -316,24 +318,15 @@
     "age = 25\n",
     "student_name = \"Rahul\"\n",
     "marks_1 = 90\n",
-    "_count = 3.9\n"
+    "_count = 3.9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "effb9160-e0f6-431f-a1bf-55b99d4ffa76",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3093262564.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[10], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    class = 10         # Keyword\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# not allowed \n",
     "# 1name = \"Alex\"     # Invalid\n",
@@ -359,10 +352,10 @@
    "source": [
     "# Python has reserved words called keywords, which cannot be used as variable names.\n",
     "import keyword\n",
-    "\n",
     "print(keyword.kwlist)\n",
     "\n",
-    "true = 4"
+    "# True = 4 # Not allowed\n",
+    "true = 4 # Allowed"
    ]
   },
   {
@@ -419,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "dc56677f-fb4d-43f6-8239-52229568c50f",
    "metadata": {},
    "outputs": [
@@ -428,7 +421,8 @@
      "output_type": "stream",
      "text": [
       "20\n",
-      "30\n"
+      "30\n",
+      "50\n"
      ]
     }
    ],
@@ -439,7 +433,7 @@
     "\n",
     "print(age)\n",
     "print(Age)\n",
-    "# print(age + Age)"
+    "print(age + Age)"
    ]
   },
   {
@@ -511,6 +505,10 @@
    ],
    "source": [
     "# Assign multiple values in one line\n",
+    "\n",
+    "# a=1\n",
+    "# b=2\n",
+    "# c=3\n",
     "\n",
     "a, b, c = 1, 2, 3\n",
     "\n",
@@ -594,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "9200ca33-96de-470a-a6a1-921ff868e7b3",
    "metadata": {},
    "outputs": [
@@ -602,6 +600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "10\n",
       "11\n"
      ]
     }
@@ -610,6 +609,8 @@
     "# Variables can change their values.\n",
     "\n",
     "count = 10\n",
+    "print(count)\n",
+    "\n",
     "count = count + 1\n",
     "print(count)"
    ]
@@ -666,15 +667,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "e4acf19e-bd22-498f-8f5f-f91478543439",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55\n"
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m age = \u001b[33m\"\u001b[39m\u001b[33m25\u001b[39m\u001b[33m\"\u001b[39m  \u001b[38;5;66;03m# This is a string, not a number\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mage\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m30\u001b[39;49m) \u001b[38;5;66;03m# ERROR\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: can only concatenate str (not \"int\") to str"
      ]
     }
    ],
@@ -704,7 +709,8 @@
    ],
    "source": [
     "# Forgetting assignment\n",
-    "s = p + 10  # No assignment, value is lost\n"
+    "\n",
+    "s = p + 10  # No assignment, value is lost"
    ]
   },
   {
@@ -856,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
