--- a/02_Python_Essentials/L02-variables-type-casting/L02-5_print_using_f_string.ipynb
+++ b/02_Python_Essentials/L02-variables-type-casting/L02-5_print_using_f_string.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "b6857940-43db-422b-830d-a0dda26f42d9",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "3c8b8094-9601-4a79-bbdb-ca71cece265b",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "93cd6ffa-c637-41ca-8739-9f0255c293ca",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "c8d5839b-4042-4318-afbe-a52b57c627db",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,8 @@
     "height = 4.1\n",
     "\n",
     "print(\"My name is\", name, \"age is\", age, \"and height is\", height) # lots of commas\n",
-    "print(f\"My name is {name} age is {age} and height is {height}\")"
+    "print(f\"My name is {name} age is {age} and height is {height}\")\n",
+    "# print(\"My name is {name} age is {age} and height is {height}\") # without f"
    ]
   },
   {
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "418d0995-9cd1-4122-b559-8c56bfdfa3e1",
    "metadata": {},
    "outputs": [
@@ -219,14 +220,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your height in cm:  120\n"
+      "Enter your height in cm:  2300\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your height in meters: 1.2\n"
+      "Your height in meters: 23.0\n"
      ]
     }
    ],
