--- a/02_Python_Essentials/L03-operators/L03-operators-2-Arithmetic_order_of_precedence.ipynb
+++ b/02_Python_Essentials/L03-operators/L03-operators-2-Arithmetic_order_of_precedence.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "2ac57954-1721-4752-8d85-962d17e6a37c",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "# e.g.\n",
+    "# e.g. PEMDAS\n",
     "\n",
     "result = 2 ** 3 * 4  # = (2**3) * 4 = 8*4 = 32\n",
     "\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "ca5f1746-90c5-4d91-aba3-b3b232258cfe",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "# e.g.\n",
+    "# e.g. PEMDAS\n",
     "\n",
     "result = 10 + 6 / 2 * 3 - 1\n",
     "\n",
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
