--- a/02_Python_Essentials/L04-if-elif-else/L04-1conditional_ifelse.ipynb
+++ b/02_Python_Essentials/L04-if-elif-else/L04-1conditional_ifelse.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5221b0b0-aea6-4cfc-9e5e-05f6f11cedc8",
    "metadata": {},
    "outputs": [
@@ -39,13 +39,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The student's score is above average.\n",
+      "That's a good result!\n",
+      "Lets celebrate\n",
       "Moving on to the next evaluation...\n"
      ]
     }
    ],
    "source": [
     "# Example: Checking a student's score using only if\n",
-    "score = 3  # change to 3 or 7\n",
+    "score = 7  # change to 3 or 7\n",
     "\n",
     "if score > 5:\n",
     "    print(\"The student's score is above average.\")\n",
@@ -79,7 +82,7 @@
     "if score > 5:\n",
     "    print(\"The student's score is above average.\")\n",
     "    print(\"That's a good result!\")\n",
-    "    print(\"Lets celebrate\")\n",
+    "    print(\"Lets celebrate\") \n",
     "else:\n",
     "    print(\"The student's score is below average.\")\n",
     "    print(\"There might be room for improvement.\")\n",
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "e33fbaf4-2e4a-41eb-b1d7-0cf9f0585352",
    "metadata": {},
    "outputs": [
@@ -105,14 +108,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter number: 6\n"
+      "Enter number: 15\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Even number\n"
+      "Odd number\n"
      ]
     }
    ],
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "e1564d31-7736-486e-a83a-41feefcbc336",
    "metadata": {},
    "outputs": [
@@ -145,7 +148,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter your name:  ash\n",
+      "Enter your name:  sumit\n",
       "Enter your age:  100\n"
      ]
     },
@@ -153,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wow ash, you're already 100 years old this year!\n"
+      "Wow sumit, you're already 100 years old this year!\n"
      ]
     }
    ],
@@ -163,7 +166,7 @@
     "name = input(\"Enter your name: \")\n",
     "age  = int(input(\"Enter your age: \"))\n",
     "\n",
-    "current_year = 2025\n",
+    "current_year = 2026\n",
     "\n",
     "if age < 100:\n",
     "    year_when_100 = current_year + (100 - age)\n",
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "98492e67-7dd9-4a18-b929-a68f2d6f13f0",
    "metadata": {},
    "outputs": [
@@ -186,19 +189,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grade: A\n",
-      "Congratulations. Your parents would be proud\n"
+      "Grade: B\n",
+      "Good work\n"
      ]
     }
    ],
    "source": [
-    "# Application of il-elif-else: Students are given grades based on their marks\n",
+    "# Application of if-elif-else: Students are given grades based on their marks\n",
     "# [100-90]: A\n",
     "# [80-90] : B\n",
     "# [70-80] : C\n",
     "# [<70]   : F\n",
     "\n",
-    "marks = 95 # change this to 55, 65, 75, 85, 95\n",
+    "marks = 85 # change this to 55, 65, 75, 85, 95\n",
     "\n",
     "if marks >= 90:\n",
     "    print(\"Grade: A\")\n",
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "4311c784-1845-4d6e-bd42-90160de4a6e5",
    "metadata": {},
    "outputs": [
@@ -243,13 +246,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are eligible for an adult ticket.\n"
+      "You are eligible for a child or senior ticket.\n"
      ]
     }
    ],
    "source": [
     "# if with 'or' - e.g.1: Check if the age is less than 13 or greater than 65\n",
-    "age = 15 # change to 11, 15, 70\n",
+    "age = 11 # change to 11, 15, 70\n",
     "\n",
     "if age < 13 or age > 65:  \n",
     "    print(\"You are eligible for a child or senior ticket.\")\n",
@@ -276,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "2eb4dd39-d4c6-4b1e-88a9-b660490d6641",
    "metadata": {},
    "outputs": [
@@ -285,14 +288,14 @@
      "output_type": "stream",
      "text": [
       "Username: admin\n",
-      "Enter password: 33333\n"
+      "Enter password: 12345\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid login\n"
+      "Successful login for admin\n"
      ]
     }
    ],
@@ -304,7 +307,7 @@
     "password = input(\"Enter password:\")\n",
     "\n",
     "if username == \"admin\" and password == \"12345\":\n",
-    "    print(\"Successful login\")\n",
+    "    print(\"Successful login for admin\")\n",
     "    \n",
     "else:\n",
     "    print(\"Invalid login\")"
@@ -336,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "2951acf7-88cf-4ffd-be4c-df5e3af16256",
    "metadata": {},
    "outputs": [
@@ -344,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U r not eligible for the scolarship\n"
+      "U r eligible for the scolarship\n"
      ]
     }
    ],
@@ -352,14 +355,14 @@
     "# if with 'and' and 'or' -\n",
     "# e.g.1: if (score > 50 and num of extra-curricular activities > 2) or (score > 80), then give scholarship\n",
     "\n",
-    "score     = 30 \n",
+    "score     = 60 # change to 30, 60\n",
     "extracurr = 2\n",
     "\n",
     "if (score > 50 and extracurr >= 2) or (score >= 80):\n",
     "    print(\"U r eligible for the scolarship\")\n",
     "    \n",
     "else:\n",
-    "    print(\"U r not eligible for the scolarship\")"
+    "    print(\"U r NOT eligible for the scolarship\")"
    ]
   },
   {
@@ -390,12 +393,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0eabe862-845f-419f-ba69-14c0b2d2a3bd",
+   "metadata": {},
+   "source": [
+    "# STOP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "461f05be-07a8-426f-93ce-1b86d87bb8e5",
+   "id": "1378472a-5fe7-4dfa-b590-c6bd15efe675",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "461f05be-07a8-426f-93ce-1b86d87bb8e5",
+   "metadata": {},
+   "source": [
+    "# EXTRA"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -469,9 +488,7 @@
    "id": "3d10ee3a-314d-4958-a6e0-dce828a43528",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# EXTRA"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -618,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
