--- a/02_Python_Essentials/L04-if-elif-else/L04-2nested_conditional.ipynb
+++ b/02_Python_Essentials/L04-if-elif-else/L04-2nested_conditional.ipynb
@@ -5,12 +5,28 @@
    "id": "5aa962ef-3cfc-4f4b-b6a6-ae5730123015",
    "metadata": {},
    "source": [
-    "# Nested if statement"
+    "# Nested if statement\n",
+    "\n",
+    "Example:\n",
+    "```\n",
+    "if [boolean_expression1]:\n",
+    "  if [boolean_expression2]:\n",
+    "      # block of code\n",
+    "  else:\n",
+    "      # block of code\n",
+    "elif [boolean_expression3]:\n",
+    "  if [boolean_expression4]:\n",
+    "      # block of code\n",
+    "  else:\n",
+    "      # block of code\n",
+    "else:\n",
+    "      # block of code\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "1c643cc6-4b00-4a32-917c-e319625db19d",
    "metadata": {},
    "outputs": [
@@ -18,26 +34,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are eligible to drive.\n"
+      "You are over 18, but you need a driving license.\n"
      ]
     }
    ],
    "source": [
     "# If age > 18 and has license, then eligible to drive\n",
-    "# if age > 18 and no license, then you eligible to drive but need Driver license to be on road\n",
+    "# if age > 18 and no license, then you are over 18 but need Driver license to be on road\n",
     "# if age < 18, then not eligible to drive\n",
     "\n",
     "age = 19 # change to 12, 19, \n",
-    "has_license = True\n",
+    "has_license = False # True, False\n",
     "\n",
     "if age >= 18:\n",
     "    if has_license:\n",
     "        print(\"You are eligible to drive.\")\n",
     "    else:\n",
-    "        print(\"You are eligible to drive, but you need a driving license.\")\n",
+    "        print(\"You are over 18, but you need a driving license.\")\n",
     "\n",
     "else:\n",
-    "    print(\"You are too young to drive. You are younger than 18\")"
+    "    print(\"You are younger than 18. You are too young to drive. \")"
    ]
   },
   {
@@ -50,17 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3f64dc77-0271-4179-a9cf-cf232c83e16d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pay fees to appear for exam\n"
+     ]
+    }
+   ],
    "source": [
     "# if attendance >= 75 and fees is paid, then student is eligible for exam\n",
     "# if attendance >= 75 and fees is NOT paid, then student needs to pay fees to appear for exam\n",
     "# if attendance < 75, then student is falling low on attendance\n",
     "\n",
-    "attendance = 80\n",
-    "fees_paid = True\n",
+    "attendance = 80 # change to 60, 80\n",
+    "fees_paid = False # change to True, False\n",
     "\n",
     "if attendance >= 75:\n",
     "    if fees_paid:\n",
@@ -96,13 +120,26 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3d10ee3a-314d-4958-a6e0-dce828a43528",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# EXTRA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "523db02b-8808-4597-9ba4-6ad08cc28d93",
+   "metadata": {},
+   "source": [
+    "## A bank decides loan approval based on:\n",
+    "\n",
+    "### Level 1 Decision\n",
+    "- Check credit score (Should be > 700)\n",
+    "\n",
+    "### Level 2 Decisions\n",
+    "- If credit score is good → Check income (income should be > 50000)\n",
+    "- If credit score is bad → Check collateral"
    ]
   },
   {
@@ -111,7 +148,29 @@
    "id": "41d6c1bc-6493-40c1-9653-82dd7088c51d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "credit_score = 720\n",
+    "monthly_income = 55000\n",
+    "has_collateral = False\n",
+    "\n",
+    "if credit_score >= 700:\n",
+    "    print(\"Good Credit Score\")\n",
+    "\n",
+    "    # Nested IF inside IF\n",
+    "    if monthly_income >= 50000:\n",
+    "        print(\"Loan Approved\")\n",
+    "    else:\n",
+    "        print(\"Loan Approved with Lower Amount\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"Low Credit Score\")\n",
+    "\n",
+    "    # Nested IF inside ELSE\n",
+    "    if has_collateral:\n",
+    "        print(\"Loan Approved Against Collateral\")\n",
+    "    else:\n",
+    "        print(\"Loan Rejected\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -138,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
