--- a/02_Python_Essentials/L05-loops/L05-1_loop_for_range_break_continue.ipynb
+++ b/02_Python_Essentials/L05-loops/L05-1_loop_for_range_break_continue.ipynb
@@ -25,13 +25,13 @@
      "output_type": "stream",
      "text": [
       "hello\n",
+      "I am hungry\n",
       "hello\n",
+      "I am hungry\n",
       "hello\n",
+      "I am hungry\n",
       "hello\n",
-      "hello\n",
-      "hello\n",
-      "hello\n",
-      "hello\n"
+      "I am hungry\n"
      ]
     }
    ],
@@ -39,50 +39,71 @@
     "# step1: suppose we want to print hello 4 times:\n",
     "print(\"hello\")\n",
     "print(\"I am hungry\")\n",
-    "print(\"hello\")\n",
-    "print(\"I am hungry\")\n",
-    "print(\"hello\")\n",
-    "print(\"I am hungry\")\n",
+    "\n",
     "print(\"hello\")\n",
     "print(\"I am hungry\")\n",
     "\n",
-    "#######################\n",
+    "print(\"hello\")\n",
+    "print(\"I am hungry\")\n",
     "\n",
-    "# step2: Or I can print using for loop\n",
-    "for i in [0,1,2,3]: \n",
-    "    print(\"hello\")\n",
-    "    print(\"I am hungry\")\n",
-    "print(\"Finished\")"
+    "print(\"hello\")\n",
+    "print(\"I am hungry\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "20d82859",
+   "execution_count": 2,
+   "id": "10effa88-4c2a-44df-894b-7d99c09252f4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "###############\n",
-      "0:hello\n",
-      "I am trapped in for loop\n",
-      "1:hello\n",
-      "I am trapped in for loop\n",
-      "2:hello\n",
-      "I am trapped in for loop\n",
-      "3:hello\n",
-      "I am trapped in for loop\n",
-      "Finished\n",
-      "0 * 3 = 0\n",
-      "1 * 3 = 3\n",
-      "2 * 3 = 6\n",
-      "3 * 3 = 9\n",
+      "hello\n",
+      "I am hungry\n",
+      "hello\n",
+      "I am hungry\n",
+      "hello\n",
+      "I am hungry\n",
+      "hello\n",
+      "I am hungry\n",
+      "Finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step2: Or I can print using for loop\n",
+    "\n",
+    "for i in [0, 1, 2, 3]: \n",
+    "    print(\"hello\")\n",
+    "    print(\"I am hungry\")\n",
+    "    \n",
+    "print(\"Finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1581cd3-e8d2-4c62-9147-2d712fdaff83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e164d098-e5d8-48c0-a912-7b9249d1e0c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 I am trapped in for loop\n",
+      "1 I am trapped in for loop\n",
+      "2 I am trapped in for loop\n",
+      "3 I am trapped in for loop\n",
       "Finished\n"
      ]
     }
@@ -93,19 +114,179 @@
     "# STEP1: Lets print a number in front of each line\n",
     "for i in [0, 1, 2, 3]:\n",
     "    print(i, \"I am trapped in for loop\") \n",
-    "print(\"Finished\")\n",
-    "\n",
-    "\n",
-    "# STEP2: lets perform some math on elements: multiply all elements by 3\n",
-    "for i in [0, 1, 2, 3]:\n",
-    "    res = i * 3\n",
-    "    print(f\"{i} * 3 = {res}\")\n",
+    "    \n",
     "print(\"Finished\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "id": "78ec32da-dc2a-477f-a1ae-d025beec1403",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 3\n",
+      "1 4\n",
+      "2 5\n",
+      "3 6\n",
+      "Finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# STEP2: Lets print i, and add 3 to it.\n",
+    "\n",
+    "for i in [0, 1, 2, 3]:\n",
+    "    print(i, i+3) \n",
+    "    \n",
+    "print(\"Finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "20d82859",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 * 3 = 0\n",
+      "1 * 3 = 3\n",
+      "2 * 3 = 6\n",
+      "3 * 3 = 9\n",
+      "Finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# STEP3: lets perform some math on elements: multiply all elements by 3\n",
+    "for i in [0, 1, 2, 3]:\n",
+    "    res = i * 3\n",
+    "    print(f\"{i} * 3 = {res}\")\n",
+    "    \n",
+    "print(\"Finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74c9c664-f0dc-4226-9df7-445fe651c13c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "495aefff-a862-4416-9bb3-36628b4aec1c",
+   "metadata": {},
+   "source": [
+    "# range()\n",
+    "### Generally used with for loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3479748e-8991-4585-b0d0-9fff128bf32c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 hello\n",
+      "...I am trapped in for loop\n",
+      "1 hello\n",
+      "...I am trapped in for loop\n",
+      "2 hello\n",
+      "...I am trapped in for loop\n",
+      "3 hello\n",
+      "...I am trapped in for loop\n",
+      "finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now comes range: It helps to iterate many many times..say 100\n",
+    "# range(start, stop, step): Generates a sequence from start up to (but not including) stop, incrementing by step.\n",
+    "# default step=1\n",
+    "\n",
+    "for i in range(0, 4): # here start=0, stop=4\n",
+    "    print(f\"{i} hello\") # here I am accessing iterator i\n",
+    "    print(\"...I am trapped in for loop\") \n",
+    "    \n",
+    "print(\"finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fbca9f09-5587-4822-8cd5-3cd31ec348d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 * 3 = 0 \n",
+      "1 * 3 = 3 \n",
+      "2 * 3 = 6 \n",
+      "3 * 3 = 9 \n",
+      "Finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets perform some math on elements: multiply all elements by 3\n",
+    "\n",
+    "for i in range(0, 4):\n",
+    "    res = i * 3\n",
+    "    print(f\"{i} * 3 = {res} \")\n",
+    "    \n",
+    "print(\"Finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "be84af20-6bc4-44db-8e21-ad9bfb417944",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 * 4 = 0\n",
+      "4 * 4 = 16\n",
+      "8 * 4 = 32\n",
+      "12 * 4 = 48\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lets redo above and add the step in range: 0, 4, 8, 12\n",
+    "\n",
+    "for i in range(0, 16, 4): # start=0, stop=16, step=4\n",
+    "    res = i * 4\n",
+    "    print(f\"{i} * 4 = {res}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85bbb058-cc36-4477-8cf3-a6293581162a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "6bf3db47",
    "metadata": {},
    "outputs": [
@@ -122,7 +303,9 @@
    ],
    "source": [
     "# 1) prints all elements of a list with meaningful message with each fruit\n",
+    "\n",
     "fruits = [\"mango\", \"kiwi\", \"cherry\", \"jackfruit\"]\n",
+    "\n",
     "for e in fruits:\n",
     "    print(\"I love\", e)"
    ]
@@ -146,85 +329,44 @@
    ],
    "source": [
     "# 2) enumerate\n",
+    "\n",
     "fruits = [\"mango\", \"kiwi\", \"cherry\", \"jackfruit\"]\n",
+    "\n",
     "for idx, e in enumerate(fruits):\n",
     "    print(idx, \": I love\", e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "acf223a2-e6f7-460c-b208-b16525aeeb6c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "466aa290",
-   "metadata": {},
-   "source": [
-    "# Range\n",
-    "### generally used with for loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "1f337507-ff95-4970-84db-c36ad69a48c3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 hello\n",
-      "I am trapped in for loop\n",
-      "1 hello\n",
-      "I am trapped in for loop\n",
-      "2 hello\n",
-      "I am trapped in for loop\n",
-      "3 hello\n",
-      "I am trapped in for loop\n",
-      "finished\n",
-      "0 * 3 = 0 \n",
-      "1 * 3 = 3 \n",
-      "2 * 3 = 6 \n",
-      "3 * 3 = 9 \n",
-      "Finished\n",
-      "0 * 4 = 0\n",
-      "4 * 4 = 12\n",
-      "8 * 4 = 24\n",
-      "12 * 4 = 36\n"
+      "6 : I love mango\n",
+      "7 : I love kiwi\n",
+      "8 : I love cherry\n",
+      "9 : I love jackfruit\n"
      ]
     }
    ],
    "source": [
-    "# Now comes range: It helps to iterate many many times..say 100\n",
-    "# range(start, stop, step): Generates a sequence from start up to (but not including) stop, incrementing by step.\n",
-    "# default step=1\n",
+    "# 3) enumerate with start\n",
     "\n",
-    "for i in range(0, 4): # here start=0, stop=4\n",
-    "    print(f\"{i} hello\") # here I am accessing iterator i\n",
-    "    print(\"I am trapped in for loop\") \n",
-    "    \n",
-    "print(\"finished\")\n",
+    "fruits = [\"mango\", \"kiwi\", \"cherry\", \"jackfruit\"]\n",
     "\n",
-    "#################################\n",
-    "# Lets perform some math on elements: multiply all elements by 3\n",
-    "for i in range(0,4):\n",
-    "    res = i * 3\n",
-    "    print(f\"{i} * 3 = {res} \")\n",
-    "    \n",
-    "print(\"Finished\")\n",
-    "\n",
-    "##################################\n",
-    "# lets redo above and add the step in range: 0,4,8,12\n",
-    "for i in range(0,16,4): # start=0, stop=16, step=4\n",
-    "    res = i * 4\n",
-    "    print(f\"{i} * 4 = {res}\")\n",
-    "    "
+    "for idx, e in enumerate(fruits, start=6):\n",
+    "    print(idx, \": I love\", e)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "466aa290",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -236,8 +378,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a603239d-ef5c-4105-8501-14e874140ade",
+   "metadata": {},
+   "source": [
+    "## Find if number 7 exists in a list\n",
+    "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 3, 14, 76, 34, 23]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "id": "7341f6d7-e6e6-4618-961b-d8428d8a57a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checking 5\n",
+      "checking 23\n",
+      "checking 8\n",
+      "checking 43\n",
+      "checking 7\n",
+      "Found target!\n",
+      "checking 3\n",
+      "checking 65\n",
+      "checking 16\n",
+      "checking 3\n",
+      "checking 14\n",
+      "checking 76\n",
+      "checking 34\n",
+      "checking 23\n",
+      "Loop finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step1) Without break\n",
+    "\n",
+    "# Find if number 7 exists in a list\n",
+    "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 3, 14, 76, 34, 23]\n",
+    "\n",
+    "for i in numbers:\n",
+    "    print(\"checking\", i)\n",
+    "    if i == 7:\n",
+    "        print(\"Found target!\")\n",
+    "        \n",
+    "print(\"Loop finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "d050f00f-fd4c-4e47-b8b6-879fecffaeb4",
    "metadata": {},
    "outputs": [
@@ -251,13 +444,12 @@
       "checking 43\n",
       "checking 7\n",
       "Found target! Exiting the for loop\n",
-      "Loop finished\n",
-      "#####################\n"
+      "Loop finished\n"
      ]
     }
    ],
    "source": [
-    "# for + break:\n",
+    "# Step2) Use for + break to exit the loop\n",
     "\n",
     "# 1) Find if number 7 exists in a list: exit the loop after finding 7 in a list of numbers\n",
     "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 3, 14, 76, 34, 23]\n",
@@ -272,6 +464,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "781f7dfb-d432-46b3-86cf-8fa2389a269e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87a6b2a6-e5f1-4099-b0ee-cf0c06b5fa18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "77bc3fbb-403b-489d-8cb4-02afbfd0ed0d",
    "metadata": {},
@@ -281,8 +489,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7ce5a41-e39d-4de8-9168-f785fe7f96d5",
+   "metadata": {},
+   "source": [
+    "### Make all numbers negative, except 65:\n",
+    "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 65, 14]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "4bbfc1aa-2618-4421-83f0-edcee0ec903f",
    "metadata": {},
    "outputs": [
@@ -290,30 +507,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number: 5\n",
-      "number: 23\n",
-      "number: 8\n",
-      "number: 43\n",
-      "number: 7\n",
-      "number: 3\n",
-      "skipping number 65\n",
-      "number: 16\n",
-      "skipping number 65\n",
-      "number: 14\n",
-      "Loop finished\n",
-      "#####################\n"
+      "Making 5 negative: -5\n",
+      "Making 23 negative: -23\n",
+      "Making 8 negative: -8\n",
+      "Making 43 negative: -43\n",
+      "Making 7 negative: -7\n",
+      "Making 3 negative: -3\n",
+      "Skipping number 65\n",
+      "Making 16 negative: -16\n",
+      "Skipping number 65\n",
+      "Making 14 negative: -14\n",
+      "Loop finished\n"
      ]
     }
    ],
    "source": [
-    "# 1) continue: make all numbers negative, except 65\n",
+    "# Using continue: \n",
     "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 65, 14]\n",
     "\n",
     "for i in numbers:\n",
     "    if i == 65:\n",
-    "        print(\"skipping number\", i)\n",
+    "        print(\"Skipping number\", i)\n",
     "        continue # NOTE: comment it out to see what happens without it\n",
-    "    print(f\"make it negative: {-i}\")\n",
+    "    print(f\"Making {i} negative: {-i}\")\n",
     "        \n",
     "print(\"Loop finished\")"
    ]
@@ -513,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
